[package]
name = "sake"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
rand = "0.8"
needletail = "0.6"
num = "0.4"
num-traits = "0.2.19"
# kmerutils = { version = "0.0.14", features = ["stdsimd"]}
kmerutils = { git = "https://github.com/jianshu93/kmerutils", features = ["stdsimd"] }
# anndists = { version = "0.1.3", features = ["stdsimd"] }
anndists = { git = "https://github.com/jianshu93/anndists", features = ["stdsimd"] }
xxhash-rust = { version = "0.8", features = [ "std", "xxh3" ] }
## rust-diskann = "0.2.0"
rust-diskann = { git = "https://github.com/jianshu93/rust-diskann" }